--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "next": "15.0.0",
+        "next": "^15.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "framer-motion": "^10.16.4",
@@ -37,6 +37,6 @@
         "autoprefixer": "^10.4.16",
         "postcss": "^8.4.31",
         "eslint": "^8",
-        "eslint-config-next": "15.0.0"
+        "eslint-config-next": "^15.1.0"
     }
 }
